# MPEG-O

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DOC-AUDIT.md  HANDOFF.md  LICENSE-IMPORT-EXPORT  README.md  WORKPLAN.md
native/: CMakeLists.txt
native/bench/: bench_throughput.c
native/include/: ttio_rans.h
native/src/: dispatch.c  fqzcomp_qual.c  fqzcomp_qual.h  m94z_v4_wire.c  m94z_v4_wire.h  mate_info_v2.c  mate_info_v2.h  name_tok_v2.c  name_tok_v2.h  rans_adaptive_internal.h  rans_core.c  rans_decode_adaptive.c  rans_decode_avx2.c  rans_decode_m94z.c  rans_decode_scalar.c  rans_decode_sse41.c  rans_decode_streaming.c  rans_encode_adaptive.c  rans_encode_avx2.c  rans_encode_scalar.c  rans_encode_sse41.c  rans_internal.h  rans_o0.c  rc_arith.h  rc_cram.c  rc_cram.h  ref_diff_v2.c  ref_diff_v2.h  threadpool.c  ttio_rans_jni.c  wire_format.c
native/tests/: test_adaptive_byte_pairing.c  test_adaptive_halve_boundary.c  test_adaptive_max_sym_bounds.c  test_adaptive_roundtrip.c  test_fqzcomp_qual_autotune.c  test_fqzcomp_qual_strategy1.c  test_fqzcomp_qual_threaded.c  test_m94z_decode.c  test_mate_info_v2_helpers.c  test_mate_info_v2_invariants.c  test_mate_info_v2_stress.c  test_name_tok_v2_helpers.c  test_name_tok_v2_invariants.c  test_name_tok_v2_stress.c  test_rans_o0_byte_exact.c  test_rc_cram_byte_equal.c  test_ref_diff_v2_helpers.c  test_ref_diff_v2_invariants.c  test_ref_diff_v2_stress.c  test_roundtrip.c  test_streaming.c  test_thread_safety.c  test_v2_format.c
python/: README.md  pyproject.toml  setup.py
python/docs/: conf.py  index.rst
python/docs/_build/html/: genindex.html  py-modindex.html  searchindex.js
python/scripts/: repro_mcp_handoff.py
python/src/mpeg_o/: __init__.py  _hdf5_io.py  _numpress.py  _rwlock.py  access_policy.py  acquisition_run.py  anonymization.py  axis_descriptor.py  chromatogram.py  cipher_suite.py  cv_param.py  encoding_spec.py  encryption.py  encryption_per_au.py  enums.py  feature.py  feature_flags.py  fid.py  identification.py  instrument_config.py  ir_image.py  ir_spectrum.py  isolation_window.py  key_rotation.py  mass_spectrum.py  ms_image.py  nmr_2d.py  nmr_spectrum.py  pqc.py  provenance.py  quantification.py  query.py  raman_image.py  raman_spectrum.py  remote.py  signal_array.py  signatures.py  spectral_dataset.py  spectrum.py  stream_reader.py  (+6 more)
python/src/mpeg_o/analysis/: __init__.py  two_d_cos.py
python/src/mpeg_o/exporters/: __init__.py  _jcamp_encode.py  imzml.py  isa.py  jcamp_dx.py  mzml.py  mztab.py  nmrml.py
python/src/mpeg_o/importers/: __init__.py  _base64_zlib.py  _jcamp_decode.py  bruker_tdf.py  bruker_tdf_cli.py  cv_term_mapper.py  (+8 more)
python/src/ttio/: __init__.py  _hdf5_io.py  _numpress.py  _rwlock.py  access_policy.py  acquisition_run.py  aligned_read.py  anonymization.py  axis_descriptor.py  chromatogram.py  cipher_suite.py  cv_param.py  encoding_spec.py  encryption.py  encryption_per_au.py  enums.py  feature.py  feature_flags.py  fid.py  genomic_index.py  genomic_run.py  identification.py  instrument_config.py  ir_image.py  ir_spectrum.py  isolation_window.py  key_rotation.py  mass_spectrum.py  ms_image.py  nmr_2d.py  nmr_spectrum.py  pqc.py  provenance.py  quantification.py  query.py  raman_image.py  raman_spectrum.py  remote.py  signal_array.py  signatures.py  (+10 more)
python/tests/: README.md  conftest.py  test_au_filter.py  test_bruker_tdf.py  test_c1_cli_mains.py  test_canonical_bytes_cross_backend.py  test_canonical_signatures.py  test_cipher_suite.py  test_compound_writer_parity.py  test_compression_benchmark.py  test_compression_codecs.py  test_cross_compat.py  test_encrypted_transport.py  test_encryption.py  test_fasta_fastq_io.py  test_fasta_fastq_tio_roundtrip.py  test_hdf5_io.py  test_importers.py  test_imzml_writer.py  test_m54_1_provider_pqc.py  test_m54_pqc_conformance.py  test_m75_cli_parity.py  test_m76_jcamp_compressed_writer.py  test_m76_jcamp_conformance.py  test_m77_two_d_cos.py  test_m77_two_d_cos_conformance.py  test_m78_feature.py  test_m78_mztab_conformance.py  test_m79_genomic_enums.py  test_m82_genomic_run.py  test_m83_rans.py  test_m84_base_pack.py  test_m85_quality.py  test_m85b_name_tokenizer.py  test_m86_genomic_codec_wiring.py  test_m87_bam_importer.py  test_m88_cram_bam_round_trip.py  test_m89_5_genomic_encryption.py  test_m90_10_genomic_wire_codec.py  test_m90_11_encrypted_genomic_headers.py  (+75 more)
python/tests/fixtures/: README.md  checksums.json  download.py  generate.py
python/tests/integration/: _mate_info_corpus.py  _provider_matrix.py  test_bruker_tdf_integration.py  test_fasta_fastq_cross_language.py  test_imzml_import.py  test_m87_cross_language.py  test_m88_1_bam_dump_cram.py  test_m88_cross_language.py  test_m90_cross_language.py  test_m91_multi_omics.py  test_m93_compression_gate.py  test_m94z_v4_byte_exact.py  test_m94z_v4_cross_language.py  test_mate_info_v2_compression_gate.py  test_mate_info_v2_cross_language.py  test_mate_info_v2_v1_oracle.py  test_msimage_cube_cross_provider.py  test_mzml_roundtrip.py  test_mztab_import.py  test_name_tok_v2_compression_gate.py  test_name_tok_v2_cross_language.py  test_name_tok_v2_v1_oracle.py  test_nmrml_roundtrip.py  test_per_au_cross_language.py  test_raman_ir_cross_language.py  test_ref_diff_v2_compression_gate.py  test_ref_diff_v2_cross_language.py  test_ref_diff_v2_v1_oracle.py  test_synth_fixtures_smoke.py  test_thermo_delegation.py  test_waters_masslynx.py  test_workflows.py
python/tests/perf/: test_m93_throughput.py  test_m94_throughput.py  test_m94z_throughput.py  test_m95_throughput.py
python/tests/security/: test_anonymization_lifecycle.py  test_encryption_lifecycle.py  test_key_rotation_cross_provider.py  test_protection_cross_provider.py  test_security_smoke.py  test_signature_lifecycle.py
python/tests/stress/: test_cloud_access.py  test_concurrent_access.py  test_large_file.py  test_provider_benchmark.py  test_stress_smoke.py
python/tests/validation/: test_cross_language_smoke.py  test_m64_cross_tool_validation.py  test_m82_3x3_matrix.py  test_m89_cross_language.py  test_validation_smoke.py
(+3627 files in other folders)
