[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mpeg-o"
version = "0.8.0"
description = "Python reader/writer for the MPEG-O multi-omics data standard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "DTW-Thalion" }]
keywords = ["mass-spectrometry", "NMR", "multi-omics", "HDF5", "mzML", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "h5py>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
import = ["lxml"]
cloud = ["fsspec", "s3fs", "aiohttp"]
codecs = ["hdf5plugin>=4.0"]
# v0.7 M46: ZarrProvider reference implementation. Pinned to zarr 2.x
# because zarr-python 3 rewrites the storage API; v0.7's abstraction
# targets the 2.18+ line. Bumping to zarr 3 is a v0.8 follow-up.
zarr = ["zarr>=2.18,<3"]
# v0.8 M49: post-quantum crypto (ML-KEM-1024 + ML-DSA-87) via liboqs.
# Requires a system liboqs ≥ 0.14 — liboqs-python auto-builds one
# under $HOME/_oqs on first import if missing. See docs/pqc.md for
# the platform matrix (Python/ObjC: liboqs; Java: Bouncy Castle).
pqc = ["liboqs-python>=0.14,<1"]
# v0.8 M53: Bruker timsTOF TDF importer. opentimspy wraps the open-source
# libtimsdata decoder (ZSTD-compressed frames + scan-to-ion mapping) — no
# proprietary Bruker SDK is involved. The bridge package bundles the
# prebuilt libtimsdata.so / libtimsdata.dll / libtimsdata.dylib so pip
# install is the whole story.
bruker = ["opentimspy>=1.0", "opentims-bruker-bridge>=1.0"]
test = ["pytest>=7", "cryptography>=41.0", "lxml", "fsspec", "aiohttp", "hdf5plugin>=4.0", "zarr>=2.18,<3", "liboqs-python>=0.14,<1", "opentimspy>=1.0", "opentims-bruker-bridge>=1.0"]
# v0.9 M57: integration test extras. pyimzML for M59 imzML imports;
# pyteomics + pymzml for M64 cross-reader validation;
# isatools is pinned because the API churns between minor releases.
integration = ["pyimzml>=1.5", "pyteomics>=4.6", "pymzml>=2.5", "isatools>=0.14,<1"]
all = ["mpeg-o[crypto,import,cloud,codecs,zarr,pqc,bruker]"]

[project.urls]
Homepage = "https://github.com/DTW-Thalion/MPEG-O"
Repository = "https://github.com/DTW-Thalion/MPEG-O"
Issues = "https://github.com/DTW-Thalion/MPEG-O/issues"

[project.entry-points."mpeg_o.providers"]
hdf5 = "mpeg_o.providers.hdf5:Hdf5Provider"
memory = "mpeg_o.providers.memory:MemoryProvider"
sqlite = "mpeg_o.providers.sqlite:SqliteProvider"
zarr = "mpeg_o.providers.zarr:ZarrProvider"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mpeg_o = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
