[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttio"
version = "1.1.1"
description = "Python reader/writer for the TTI-O multi-omics data standard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "DTW-Thalion" }]
keywords = ["mass-spectrometry", "NMR", "multi-omics", "HDF5", "mzML", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "h5py>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
import = ["lxml"]
cloud = ["fsspec", "s3fs", "aiohttp"]
codecs = ["hdf5plugin>=4.0"]
# v0.7 M46: ZarrProvider reference implementation. v0.9 migrated the
# on-disk format from Zarr v2 to v3, so the dependency is pinned to
# zarr-python 3.x.
zarr = ["zarr>=3.0"]
# v0.8 M49: post-quantum crypto (ML-KEM-1024 + ML-DSA-87) via liboqs.
# Requires a system liboqs ≥ 0.14 — liboqs-python auto-builds one
# under $HOME/_oqs on first import if missing. See docs/pqc.md for
# the platform matrix (Python/ObjC: liboqs; Java: Bouncy Castle).
pqc = ["liboqs-python>=0.14,<1"]
# v0.8 M53: Bruker timsTOF TDF importer. opentimspy wraps the open-source
# libtimsdata decoder (ZSTD-compressed frames + scan-to-ion mapping) — no
# proprietary Bruker SDK is involved. The bridge package bundles the
# prebuilt libtimsdata.so / libtimsdata.dll / libtimsdata.dylib so pip
# install is the whole story.
bruker = ["opentimspy>=1.0", "opentims-bruker-bridge>=1.0"]
test = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4", "cryptography>=41.0", "lxml", "fsspec", "aiohttp", "hdf5plugin>=4.0", "zarr>=3.0", "liboqs-python>=0.14,<1", "opentimspy>=1.0", "opentims-bruker-bridge>=1.0", "websockets>=12.0"]
# v0.9 M57: integration test extras. pyimzML for M59 imzML imports;
# pyteomics + pymzml for M64 cross-reader validation;
# isatools is pinned because the API churns between minor releases.
integration = ["pyimzml>=1.5", "pyteomics>=4.6", "pymzml>=2.5", "isatools>=0.14,<1"]
# v0.10 M68: streaming transport over WebSocket. The codec itself
# (ttio.transport.packets / .codec) has no network dependency;
# only the TransportServer / TransportClient need ``websockets``.
network = ["websockets>=12.0"]
all = ["ttio[crypto,import,cloud,codecs,zarr,pqc,bruker]"]

[project.urls]
Homepage = "https://github.com/DTW-Thalion/TTI-O"
Repository = "https://github.com/DTW-Thalion/TTI-O"
Issues = "https://github.com/DTW-Thalion/TTI-O/issues"

[project.entry-points."ttio.providers"]
hdf5 = "ttio.providers.hdf5:Hdf5Provider"
memory = "ttio.providers.memory:MemoryProvider"
sqlite = "ttio.providers.sqlite:SqliteProvider"
zarr = "ttio.providers.zarr:ZarrProvider"

# v0.12 M75: console_scripts for the three protection tools, giving
# Python parity with the Java (global.thalion.ttio.tools.*) and ObjC
# (objc/Tools/Ttio*) CLI family. ttio-pqc additionally mirrors the
# subcommand grammar of its peers 1:1.
[project.scripts]
ttio-sign = "ttio.tools.ttio_sign_cli:main"
ttio-verify = "ttio.tools.ttio_verify_cli:main"
ttio-pqc = "ttio.tools.ttio_pqc_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ttio = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "strict"

# V1 (verification workplan): code coverage. No threshold enforced;
# CI publishes coverage.xml + htmlcov/ as artifacts. See
# docs/verification-workplan.md §V1.
[tool.coverage.run]
source = ["src/ttio"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_jcamp_decode.py",  # vendored helper; see comment in module
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
