[build-system]
# Cython>=3.0 build dep for the FQZCOMP_NX16_Z C extension at
# ttio.codecs._fqzcomp_nx16. The extension is optional; the pure-Python
# reference implementation in ttio/codecs/fqzcomp_nx16_z.py produces
# byte-identical output, just slower.
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttio"
version = "1.0.0"
description = "Python reader/writer for the TTI-O multi-omics data standard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LGPL-3.0-or-later" }
keywords = ["mass-spectrometry", "NMR", "multi-omics", "HDF5", "mzML", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "h5py>=3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
import = ["lxml"]
cloud = ["fsspec", "s3fs", "aiohttp"]
codecs = ["hdf5plugin>=4.0"]
# ZarrProvider reference implementation. The on-disk format uses
# Zarr v3; the dependency is pinned to zarr-python 3.x.
zarr = ["zarr>=3.0"]
# Post-quantum crypto (ML-KEM-1024 + ML-DSA-87) via liboqs. Requires a
# system liboqs >= 0.14 — liboqs-python auto-builds one under
# $HOME/_oqs on first import if missing. See docs/pqc.md for the
# platform matrix (Python/ObjC: liboqs; Java: Bouncy Castle).
pqc = ["liboqs-python>=0.14,<1"]
# Bruker timsTOF TDF importer. opentimspy wraps the open-source
# libtimsdata decoder (ZSTD-compressed frames + scan-to-ion mapping) —
# no proprietary Bruker SDK is involved. The bridge package bundles
# the prebuilt libtimsdata.so / libtimsdata.dll / libtimsdata.dylib so
# pip install is the whole story.
bruker = ["opentimspy>=1.0", "opentims-bruker-bridge>=1.0"]
test = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4", "hypothesis>=6", "cryptography>=41.0", "lxml", "fsspec", "aiohttp", "hdf5plugin>=4.0", "zarr>=3.0", "liboqs-python>=0.14,<1", "opentimspy>=1.0", "opentims-bruker-bridge>=1.0", "websockets>=12.0"]
# Integration test extras: pyimzML for imzML imports; pyteomics +
# pymzml for cross-reader validation; isatools is pinned because the
# API churns between minor releases.
integration = ["pyimzml>=1.5", "pyteomics>=4.6", "pymzml>=2.5", "isatools>=0.14,<1"]
# Streaming transport over WebSocket. The codec itself
# (ttio.transport.packets / .codec) has no network dependency; only
# the TransportServer / TransportClient need websockets.
network = ["websockets>=12.0"]
# API documentation generation via Sphinx + sphinx-autoapi. Renders
# NumPy-style docstrings into HTML under python/docs/_build/html/.
docs = ["sphinx>=7", "sphinx-autoapi>=3", "furo>=2024.0"]
all = ["ttio[crypto,import,cloud,codecs,zarr,pqc,bruker]"]

[project.urls]
Homepage = "https://github.com/DTW-Thalion/TTI-O"
Repository = "https://github.com/DTW-Thalion/TTI-O"
Issues = "https://github.com/DTW-Thalion/TTI-O/issues"

[project.entry-points."ttio.providers"]
hdf5 = "ttio.providers.hdf5:Hdf5Provider"
memory = "ttio.providers.memory:MemoryProvider"
sqlite = "ttio.providers.sqlite:SqliteProvider"
zarr = "ttio.providers.zarr:ZarrProvider"

# console_scripts for the three protection tools, giving Python parity
# with the Java (global.thalion.ttio.tools.*) and ObjC
# (objc/Tools/Ttio*) CLI family. ttio-pqc mirrors the subcommand
# grammar of its peers 1:1.
[project.scripts]
ttio-sign = "ttio.tools.ttio_sign_cli:main"
ttio-verify = "ttio.tools.ttio_verify_cli:main"
ttio-pqc = "ttio.tools.ttio_pqc_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ttio = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not slow and not perf and not integration'"
asyncio_mode = "strict"
markers = [
    "slow: tests that take more than ~30s; deselected by default — opt in via `-m slow`",
    "perf: throughput regression smoke; opt in via `-m perf`",
    "integration: end-to-end tests that exercise external binaries / large corpora; opt in via `-m integration`",
]

# Code coverage. CI publishes coverage.xml + htmlcov/ as artefacts and
# gates on the fail_under threshold below.
[tool.coverage.run]
source = ["src/ttio"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/_jcamp_decode.py",  # vendored helper; see comment in module
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Minimum overall line coverage. Set 1 pt below the achieved baseline
# (85% measured on the full suite) to allow for natural drift while
# catching regressions. Bump after intentional coverage improvements;
# never lower without a recorded reason. Per-file coverage in tools/
# is 71-100% (much higher) but the aggregate is dragged down by the
# three vendor-importer files (Bruker / Thermo / Waters) that need
# proprietary fixtures to exercise.
fail_under = 84
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
